add controller program and error checking

--- a/prac_07/miles_to_km_converter.kv
+++ b/prac_07/miles_to_km_converter.kv
@@ -1,23 +1,28 @@
 BoxLayout:
     orientation: 'vertical'
     BoxLayout:
-    orientation: 'horizontal'
+        orientation: 'horizontal'
         TextInput:
-        id: input_text
-        size: 1
-
-#        background_color: (0,0,0,0)
-#        color: (1,1,1,1)
+            id: input_text
+            font_size: 40
+            background_color: (100,100,100,100)
+            on_text: app.handle_conversion()
         BoxLayout:
             orientation: 'vertical'
             Button:
                 text: 'Up'
+                on_press:
+                    app.handle_increment(1)
+                    app.handle_conversion()
             Button:
                 text: 'Down'
-    Button:
-            text: 'Convert m to km'
-#            on_press: app.handle_conversion()
+                on_press:
+                    app.handle_increment(-1)
+                    app.handle_conversion()
+#    Button:
+#        text: 'Convert Miles to Km'
+#        on_press: app.handle_conversion()
     Label:
-#            text = app.result
-#            background_color: (1,1,1,1)
-#            color: (.5,.5,.5,.5)
+        font_size: 40
+        color: (1, 1, 0, 1)
+        text: app.result
