--- a/prac_07/extension_3.kv
+++ b/prac_07/extension_3.kv
@@ -1,17 +1,27 @@
 BoxLayout:
-#    Button:
-#        color: (1,0,0,1)
-#        text: "Convert"
-#        size_hint_x: .3
-#        on_press: app.handle_conversion()
-    orientation: 'vertical'
-    TextInput:
-        id: celcius_value
-        background_color: (10,10,10,0)
-        font_size: 40
-        on_text: app.convert_to_fahra(celcius_value.text)
-    TextInput
-        id: fahra_value
-        background_color: (0,0,0,.8)
-        font_size: 40
-        on_text: app.convert_to_celcius()
+    orientation: 'horizontal'
+    BoxLayout:
+        orientation: 'vertical'
+        size_hint_x: .2
+        background_color: (0,0,1,1)
+        Label:
+            text: 'Celsius'
+        Label:
+            color: (0,1,0,.8)
+            text: 'Fahrenheit'
+    BoxLayout:
+        orientation: 'vertical'
+        TextInput:
+            id: celcius_value
+            multiline: False
+            background_color: (10,10,10,1)
+            font_size: 40
+            text: app.celcius
+            on_text_validate: app.convert_to_fahra(celcius_value.text)
+        TextInput:
+            id: fahra_value
+            multiline: False
+            background_color: (0,1,0,.8)
+            font_size: 40
+            text: app.fahra
+            on_text_validate: app.convert_to_celcius()
