--- a/prac_07/extension_4.kv
+++ b/prac_07/extension_4.kv
@@ -1,8 +1,8 @@
 BoxLayout:
     orientation: 'vertical'
     BoxLayout:
-        id: button_field
+        id: buttons_field
         orientation: 'vertical'
     Label:
         id: output_text
-        on_color: (0,1,0,1)
+        color: (0,1,0,1)
